# League-OSX-Internal

./: .clang-format  .gitignore  CMakeLists.txt  FuncExport.hpp  GameData.cpp  GameData.hpp  GameObject.cpp  GameObject.hpp  Irelia.cpp  Irelia.hpp  Item.cpp  Item.hpp  JSON.hpp  Lol.slice  Main.cpp  Memory.cpp  Memory.hpp  Offsets.hpp  README.md  Script.cpp  Script.hpp  Spell.cpp  Spell.hpp  TwistedFate.cpp  TwistedFate.hpp  Utils.cpp  Utils.h  Utils.hpp  Utils.mm  Vector.h  XRayDef.hpp  Yasuo.cpp  Yasuo.hpp  Yone.cpp  Yone.hpp  compile_commands.json  imconfig.h  rd_route.c  rd_route.h
Data/: ItemData.json  SpellData.json  UnitData.json  download_data.py  download_icons_new.py  download_icons_square.py  generate_item_data.py  generate_unit_data.py
Data/unit_data/: aatrox  ahri  akali  akshan  alistar  amumu  anivia  aniviaegg  aniviaiceblock  annie  annietibbers  aphelios  apheliosturret  ashe  aurelionsol  aurora  auroraspirits  azir  azirsoldier  azirsundisc  azirtowerclicker  azirultsoldier  bard  bardfollower  bardhealthshrine  bardpickup  bardpickupnoicon  bardportalclickable  belveth  belvethspore  belvethvoidling  blitzcrank  bluetrinket  brand  braum  briar  bw_anclantern  bw_ap_bubbs  bw_ap_finn  bw_boat  (+696 more)
metal-cpp-extensions/AppKit/: AppKitPrivate.hpp  NSView.hpp  NSWindow.hpp
metal-cpp/Metal/: MTLDevice.hpp  MTLHeaderBridge.hpp
metal-cpp/QuartzCore/: CAMetalDrawable.hpp  CAPrivate.hpp
